syntax = "proto3";

package rapid.admin_api.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "rapid/admin_api/v1/model_staff.proto";

message CreateStaffRequest {
  string tenant_id = 1;
  string email = 2;
  string display_name = 3;
  StaffRole role = 4;
  string image_asset_id = 5;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "tenant_id",
        "email",
        "display_name",
        "role",
        "image_asset_id"
      ]
    }
  };
}

message CreateStaffResponse {
  Staff staff = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["staff"]
    }
  };
}
