syntax = "proto3";

package rapid.staff_api.v1;

import "google/api/annotations.proto";
import "rapid/staff_api/v1/api_asset.proto";
import "rapid/staff_api/v1/api_me.proto";
import "rapid/staff_api/v1/api_staff.proto";

service StaffV1Service {
  rpc CreateAssetPresignedURL(CreateAssetPresignedURLRequest) returns (CreateAssetPresignedURLResponse) {
    option (google.api.http) = {
      post: "/staff/v1/assets/-/presigned_url"
      body: "*"
    };
  }
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/staff/v1/me:signup"
      body: "*"
    };
  }
  rpc GetMe(GetMeRequest) returns (GetMeResponse) {
    option (google.api.http) = {get: "/staff/v1/me"};
  }
  rpc GetMeTenant(GetMeTenantRequest) returns (GetMeTenantResponse) {
    option (google.api.http) = {get: "/staff/v1/me/tenant"};
  }
  rpc UpdateMe(UpdateMeRequest) returns (UpdateMeResponse) {
    option (google.api.http) = {
      patch: "/staff/v1/me"
      body: "*"
    };
  }
  rpc UpdateMeTenant(UpdateMeTenantRequest) returns (UpdateMeTenantResponse) {
    option (google.api.http) = {
      patch: "/staff/v1/me/tenant"
      body: "*"
    };
  }
  rpc GetStaff(GetStaffRequest) returns (GetStaffResponse) {
    option (google.api.http) = {get: "/staff/v1/staffs/{staff_id}"};
  }
  rpc ListStaffs(ListStaffsRequest) returns (ListStaffsResponse) {
    option (google.api.http) = {get: "/staff/v1/staffs"};
  }
}
